src/main/scala/chapter3/output/RunMultipleAssignment2.output
//  #output
MultipleAssignment2.scala:5: error: constructor cannot be instantiated to
expected type;
 found   : (T1, T2)
 required: (String, String, String)
val (firstName, lastName) = getPersonInfo(1)
    ^
one error found
//  #output
